2003-11-12 Damien Sandras  <dsandras@seconix.com>

	* src/gnomemeeting.cpp: Fixed it a last time this year!
	
2003-11-11 Damien Sandras  <dsandras@seconix.com>

	* src/gnomemeeting.cpp: Fixed reported message again.
	
2003-11-11 Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp: Fixed call end reason message. Make sure
	that the missed calls (busy, do not disturb, not answered) are
	put in the Unanswered Calls part of the calls history. Some
	of them were missed.
	
	* src/gnomemeeting.cpp: Use correct call end reason when refusing
	a call. Some rejects were seen as "remote user did not accept the
	call" even if the remote user was the caller.
	
2003-11-11 Damien Sandras  <dsandras@seconix.com>

	* src/druid.cpp: Fixed wrong total page number.
	
2003-11-11 Damien Sandras  <dsandras@seconix.com>

	* NEWS: Updated with CVS news.

	* configure.in, gnomemeeting.schemas.in.in, src/endpoint.cpp,
	src/endpoint.h, src/gatekeeper.cpp, src/gatekeeper.h,
	src/pref_window.cpp: Added support to set the gatekeeper registration
	TTL.
	
	* src/main_window.cpp: Do not display dialed DTMF's in the URL
	bar during calls.
	
2003-11-11 Damien Sandras  <dsandras@seconix.com>

	* NEWS: Updated with CVS news.
	
2003-11-11 Damien Sandras  <dsandras@seconix.com>

	* src/config.cpp: Rebuild the speed dials menu in the call menu
	when the groups list or when a group content is modified in the
	GConf keys.
	
	* src/connection.cpp: Code cleanups.
	
	* src/endpoint.cpp: Fixed HEAD bug reported by Johnny Strom, GM
	freezing when calling itself while being in Auto Answer.
	
	* src/ldap_window.cpp: Fixed gnomemeeting_get_speed_dials_list.
	
	* src/menu.cpp, src/menu.h: Added the function that rebuilds
	the speed dials menu when required. Calling a speed dial from
	that menu will result in a new call or in a call transfer if you
	already are in a call.
	
2003-11-09 Damien Sandras  <dsandras@seconix.com>

	* lib/gtk_menu_extensions.h: Support for ID in SUBMENUs.
