@@ -798,17 +798,6 @@
       </locale>
     </schema>
     <schema>
-      <key>/schemas/apps/gnomemeeting/gatekeeper/time_to_live</key>
-      <applyto>/apps/gnomemeeting/gatekeeper/time_to_live</applyto>
-      <owner>GnomeMeeting</owner>
-      <type>int</type>
-      <default>300</default>
-      <locale name="C">
-	<short>TTL for the registration</short>
-	<long>The gatekeeper TTL for the registration, expressed in seconds.</long>
-      </locale>
-    </schema>
-    <schema>
       <key>/schemas/apps/gnomemeeting/gatekeeper/gk_alias</key>
       <applyto>/apps/gnomemeeting/gatekeeper/gk_alias</applyto>
       <owner>GnomeMeeting</owner>
