@@ -1,5 +1,11 @@
 2003-11-12 Damien Sandras  <dsandras@seconix.com>
 
+	* gnomemeeting.schemas.in.in, src/endpoint.cpp, src/endpoint.h,
+	src/gatekeeper.cpp, src/gatekeeper.h, src/pref_window.cpp, 
+	configure.in: Reverted previous TTL change.
+	
+2003-11-12 Damien Sandras  <dsandras@seconix.com>
+
 	* src/gnomemeeting.cpp: Fixed it a last time this year!
 	
 2003-11-11 Damien Sandras  <dsandras@seconix.com>
